@@ -36,7 +36,6 @@ static char *funs_filename = "funs.h";
 
 /* Name of the documentation to function pointer file. */
 static char *doc_filename = "doc.c";
-static char *key_filename = "key.c";
 
 static char *doc_header[] = {
   "/* doc.c -- Generated structure containing function names and doc strings.",
@@ -57,28 +56,6 @@ static char *doc_header_1[] = {
   "#include \"funs.h\"",
   "",
   "FUNCTION_DOC function_doc_array[] = {",
-  "",
-  NULL
-};
-
-static char *key_header[] = {
-  "/* key.c -- Generated array containing function names.",
-  "",
-  "   This file was automatically made from various source files with the",
-  "   command \"%s\".  DO NOT EDIT THIS FILE, only \"%s.c\".",
-  "",
-  NULL
-};
-
-static char *key_header_1[] = {
-  "   An entry in the array FUNCTION_KEY_ARRAY is made for each command",
-  "   found in the above files; each entry consists of",
-  "   a string which is the user-visible name of the function.  */",
-  "",
-  "#include \"key.h\"",
-  "#include \"funs.h\"",
-  "",
-  "FUNCTION_KEY function_key_array[] = {",
   "",
   NULL
 };
@@ -106,7 +83,7 @@ size_t emacs_tags_slots = 0;
 #define DECLARATION_STRING "\nDECLARE_INFO_COMMAND"
 
 static void process_one_file (char *filename, FILE *doc_stream,
-    FILE *key_stream, FILE *funs_stream);
+                              FILE *funs_stream);
 static void maybe_dump_tags (FILE *stream);
 static FILE *must_fopen (char *filename, char *mode);
 static void init_func_key (unsigned int val);
@@ -118,7 +95,6 @@ main (int argc, char **argv)
   register int i;
   int tags_only = 0;
   FILE *funs_stream, *doc_stream;
-  FILE *key_stream;
 
 #if STRIP_DOT_EXE
   {
@@ -140,14 +116,12 @@ main (int argc, char **argv)
     {
       funs_filename = NULL_DEVICE;
       doc_filename = NULL_DEVICE;
-      key_filename = NULL_DEVICE;
     }
 
   /* The order of these calls depends exactly on the order in the
      Makefile.{in,am}, or they might fail on filesystems with
      high-precision times; see also the fclose calls below.  */
   funs_stream = must_fopen (funs_filename, "w");
-  key_stream = must_fopen (key_filename, "w");
   doc_stream = must_fopen (doc_filename, "w");
 
   fprintf (funs_stream,
@@ -164,27 +138,12 @@ main (int argc, char **argv)
   fprintf (doc_stream,
            _("   Source files groveled to make this file include:\n\n"));
 
-  for (i = 0; key_header[i]; i++)
-    {
-      fprintf (key_stream, key_header[i], argv[0], argv[0]);
-      fprintf (key_stream, "\n");
-    }
-  fprintf (key_stream,
-           _("   Source files groveled to make this file include:\n\n"));
-
   for (i = 1; i < argc; i++)
-    {
-      fprintf (doc_stream, "\t%s\n", argv[i]);
-      fprintf (key_stream, "\t%s\n", argv[i]);
-    }
+    fprintf (doc_stream, "\t%s\n", argv[i]);
 
   fprintf (doc_stream, "\n");
   for (i = 0; doc_header_1[i]; i++)
     fprintf (doc_stream, "%s\n", doc_header_1[i]);
-
-  fprintf (key_stream, "\n");
-  for (i = 0; key_header_1[i]; i++)
-    fprintf (key_stream, "%s\n", key_header_1[i]);
 
   init_func_key(0);
 
@@ -197,21 +156,18 @@ main (int argc, char **argv)
         continue;
 
       fprintf (doc_stream, "/* Commands found in \"%s\". */\n", curfile);
-      fprintf (key_stream, "/* Commands found in \"%s\". */\n", curfile);
       fprintf (funs_stream, "\n/* Functions declared in \"%s\". */\n",
                curfile);
 
-      process_one_file (curfile, doc_stream, key_stream, funs_stream);
+      process_one_file (curfile, doc_stream, funs_stream);
     }
 
   fprintf (doc_stream, "   { NULL, NULL, NULL, NULL }\n};\n");
-  fprintf (key_stream, "   { NULL, 0 }\n};\n");
   fprintf (funs_stream, "\n#define A_NCOMMANDS %u\n", next_func_key());
 
   /* The order of these calls also depends exactly on the order in the
    * Makefile.{in,am}; see the must_fopen calls above.  */
   fclose (funs_stream);
-  fclose (key_stream);
   fclose (doc_stream);
 
   if (tags_only)
@@ -298,10 +254,9 @@ add_tag_to_block (EMACS_TAG_BLOCK *block,
 
 /* Read the file represented by FILENAME into core, and search it for Info
    function declarations.  Output the declarations in various forms to the
-   DOC_STREAM, KEY_STREAM, and FUNS_STREAM. */
+   DOC_STREAM and FUNS_STREAM. */
 static void
-process_one_file (char *filename, FILE *doc_stream,
-    FILE *key_stream, FILE *funs_stream)
+process_one_file (char *filename, FILE *doc_stream, FILE *funs_stream)
 {
   int descriptor, decl_len;
   char *buffer, *decl_str;
@@ -480,8 +435,6 @@ process_one_file (char *filename, FILE *doc_stream,
           "   { (VFunction *)%s, \"%s\", (FUNCTION_KEYSEQ *)0, %s },\n",
           func, func_name, doc);
 
-      fprintf (key_stream, "   { \"%s\", A_%s },\n", func_name, func);
-
       free (func_name);
 
       fprintf (funs_stream, "#define A_%s %u\n", func, next_func_key());
@@ -537,3 +490,5 @@ next_func_key(void)
 {
 	return func_key++;
 }
+
+
